Designed the HomeFragment and the SearchFragment and also the components that completes their views

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,21 +23,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            app:srcCompat="@drawable/ic_launcher_background"
-            tools:layout_editor_absoluteX="14dp"
-            tools:layout_editor_absoluteY="21dp"
+            android:src="@drawable/rectangle_25"
             android:contentDescription="@string/app_content_description" />
 
         <ImageView
             android:id="@+id/imageView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="18dp"
             android:contentDescription="@string/app_content_description"
             android:layout_weight="2"
-            tools:layout_editor_absoluteX="155dp"
-            tools:layout_editor_absoluteY="10dp"
-            tools:srcCompat="@tools:sample/avatars" />
+            android:src="@drawable/rectangle_5" />
 
     </LinearLayout>
 
@@ -56,42 +51,39 @@
             android:id="@+id/imageView4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:layout_editor_absoluteX="118dp"
             android:contentDescription="@string/app_content_description"
             android:layout_weight="1"
-            tools:layout_editor_absoluteY="184dp"
-            tools:srcCompat="@tools:sample/avatars" />
+            android:src="@drawable/rectangle_23"
+             />
 
         <ImageView
             android:id="@+id/imageView5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:contentDescription="@string/app_content_description"
-            tools:layout_editor_absoluteX="267dp"
             android:layout_weight="1"
-            android:layout_marginStart="18dp"
-            tools:layout_editor_absoluteY="175dp"
-            tools:srcCompat="@tools:sample/avatars" />
+            android:src="@drawable/rectangle_27"
+             />
 
         <ImageView
             android:id="@+id/imageView6"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="70dp"
+
             android:layout_weight="1"
             android:contentDescription="@string/app_content_description"
-            android:layout_marginStart="18dp"
-            tools:layout_editor_absoluteX="-1dp"
-            tools:layout_editor_absoluteY="184dp"
-            tools:srcCompat="@tools:sample/avatars" />
+
+            android:src="@drawable/rectangle_24" />
 
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/linearLayout3"
         android:layout_width="match_parent"
         android:layout_height="81dp"
+        android:layout_marginTop="18dp"
         android:orientation="horizontal"
         android:weightSum="2"
-        android:layout_marginTop="18dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout">
@@ -101,30 +93,31 @@
             android:id="@+id/imageView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:contentDescription="@string/app_content_description"
             android:layout_weight="1"
-            tools:srcCompat="@tools:sample/avatars" />
+            android:contentDescription="@string/app_content_description"
+            android:src="@drawable/rectangle_12" />
 
         <ImageView
             android:id="@+id/imageView7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:contentDescription="@string/app_content_description"
-            android:layout_marginStart="18dp"
             android:layout_weight="1"
-            tools:srcCompat="@tools:sample/avatars" />
+            android:contentDescription="@string/app_content_description"
+            android:src="@drawable/rectangle_17"
+             />
     </LinearLayout>
+
     <TextView
         android:id="@+id/app_hint1_tv"
+        style="@style/TextAppearance.AppCompat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/app_hint1_tv"
-        style="@style/TextAppearance.AppCompat"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="43dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />
 
     <TextView
         android:id="@+id/app_hint2_tv"
@@ -140,9 +133,10 @@
         android:id="@+id/explore_news_btn"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="9dp"
+        android:layout_marginBottom="22dp"
         android:text="@string/explore_news_btn"
         android:textAllCaps="false"
+        android:layout_marginHorizontal="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
