setup the adapters for each screens and loaded some dummy data for demonstration also made am few UI changes to some parts

--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -8,8 +8,8 @@
         android:icon="@drawable/ic_home"/>
     <item
         android:id="@+id/accountFragment"
-        android:title="@string/title_account"
-        android:icon="@drawable/ic_account_circle" />
+        android:title="@string/title_search"
+        android:icon="@drawable/ic_action_search" />
     <item
         android:id="@+id/bookmarkFragment"
         android:title="@string/title_bookmark"
