--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -16,9 +16,9 @@
     </fragment>
     <fragment
         android:id="@+id/accountFragment"
-        android:name="com.miniweam.quickread.AccountFragment"
+        android:name="com.miniweam.quickread.SearchFragment"
         android:label="fragment_account"
-        tools:layout="@layout/fragment_account" >
+        tools:layout="@layout/fragment_search" >
         <action
             android:id="@+id/action_accountFragment_to_bookmarkFragment"
             app:destination="@id/bookmarkFragment" />
