--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/homeFragment"
-        android:name="com.miniweam.quickread.HomeFragment"
+        android:name="com.miniweam.quickread.fragments.HomeFragment"
         android:label="fragment_home"
         tools:layout="@layout/fragment_home" >
         <action
@@ -16,7 +16,7 @@
     </fragment>
     <fragment
         android:id="@+id/accountFragment"
-        android:name="com.miniweam.quickread.SearchFragment"
+        android:name="com.miniweam.quickread.fragments.SearchFragment"
         android:label="fragment_account"
         tools:layout="@layout/fragment_search" >
         <action
