setup the adapters for each screens and loaded some dummy data for demonstration also made am few UI changes to some parts

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -25,7 +25,7 @@
     </fragment>
     <fragment
         android:id="@+id/bookmarkFragment"
-        android:name="com.miniweam.quickread.BookmarkFragment"
+        android:name="com.miniweam.quickread.fragments.BookmarkFragment"
         android:label="fragment_bookmark"
         tools:layout="@layout/fragment_bookmark" />
 </navigation>
