--- a/app/src/main/res/layout/fragment_news_summary.xml
+++ b/app/src/main/res/layout/fragment_news_summary.xml
@@ -27,10 +27,10 @@
 
         <ImageView
             android:id="@+id/bookmark_iv"
-            android:layout_width="45dp"
-            android:layout_height="45dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:src="@drawable/ic_bookmark"
+            android:src="@drawable/bookmark_icon"
             app:layout_constraintEnd_toEndOf="@+id/title_text"
             app:layout_constraintTop_toBottomOf="@+id/title_text" />
 
@@ -39,7 +39,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-
             android:src="@drawable/ic_account_circle"
             app:layout_constraintStart_toStartOf="@+id/title_text"
             app:layout_constraintTop_toBottomOf="@+id/title_text" />
@@ -53,7 +52,7 @@
             android:layout_marginEnd="8dp"
             android:scaleType="fitXY"
             android:src="@drawable/rectangle_17"
-            app:layout_constraintDimensionRatio="w,20:9"
+            app:layout_constraintDimensionRatio="w,18:9"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/timestamp_text" />
@@ -64,7 +63,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="32dp"
-            android:textAlignment="center"
+            android:textAlignment="textStart"
             android:textColor="?attr/colorOnSurface"
             android:textSize="20sp"
             android:textStyle="bold"
@@ -114,27 +113,26 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:progressDrawable="@drawable/loading_anim"
-            app:layout_constraintTop_toTopOf="parent"
             android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
             android:id="@+id/emptyStateTv"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
-            tools:text="Search Top News"
-            android:textColor="@color/black"
-            android:textSize="16sp"
+            android:layout_marginBottom="8dp"
             android:textAlignment="center"
+            android:textColor="?attr/colorOnSurface"
+            android:textSize="16sp"
             android:visibility="invisible"
+            app:layout_constraintBottom_toTopOf="@+id/content_text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/progressBar" />
+            tools:text="Search Top News" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
