--- a/app/src/main/res/layout/fragment_news_summary.xml
+++ b/app/src/main/res/layout/fragment_news_summary.xml
@@ -30,7 +30,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:src="@drawable/bookmark_icon"
+            android:src="@drawable/bookmark_unchecked"
+            android:background="?android:attr/selectableItemBackgroundBorderless"
+            android:clickable="true"
+            android:focusable="true"
             app:layout_constraintEnd_toEndOf="@+id/title_text"
             app:layout_constraintTop_toBottomOf="@+id/title_text" />
 
